<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".fragment.ConnexionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/sousTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/connexion" />

            <EditText
                android:id="@+id/ED_connexion_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#fff"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/ED_connexion_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <Button
                android:id="@+id/BTN_connexion_valider"
                style="@style/bouton"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/valider" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>