<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".fragment.AccueilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/sousTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenue" />

            <Button
                android:id="@+id/BTN_accueil_connexion"
                style="@style/bouton"
                android:layout_marginTop="70dp"
                android:text="@string/connexion" />

            <Button
                android:id="@+id/BTN_accueil_inscription"
                style="@style/bouton"
                android:layout_marginTop="30dp"
                android:text="@string/inscription" />

            <TextView
                style="@style/catchphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>